# shadertoy-arcana

./: CMakeLists.txt  LICENSE  README.md
c/: CMakeLists.txt  arcana_loader.c  vf_shadertoy_arcana.c  vf_shadertoy_arcana.h
go/: CMakeLists.txt  go.mod  go.sum  main.go
go/modules/: shadertoyinterop.py
